# iwwc

./: .gitignore  Cargo.toml  README.md  TODO.md  deny.toml  flake.nix  rs-nc.service
.github/workflows/: cargo.yml  deny.yml  examples.yml  mdbook.yml  nix.yml  typos.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/getting-started/: installation.md
docs/src/guide/: config-basics.md  elements.md  events-actions.md  math.md  notifications.md  styling.md  tray.md  variables.md  widgets.md
docs/src/reference/: cli.md  elements.md  style-properties.md  variables.md
examples/: config  config.json  config.kdl  config.yml  iwwc.service  test_vertical.kdl
nix/: module.nix  package.nix  shell.nix
src/: iconlookup.rs  ipc.rs  main works call launcher.rs  main.rs  mpris.rs  shared_data.rs  style
src/config/: math.rs  mod.rs  parser.rs  primitives.rs  resolved.rs  smart.rs  store.rs  types.rs
src/config/math/: ast.rs  error.rs  evaluator.rs  interpolation.rs  lexer.rs  parser.rs  value.rs
src/config/resolver/: coerce.rs  elements.rs  mod.rs  vars.rs
src/daemon/: action.rs  daemon.rs  err_handler.rs  ipc_bridge.rs  menu.rs  mod.rs  nf_handler.rs  nf_struct.rs  notification.rs  pull.rs  window.rs
src/data/: cfg_struct.rs  config.rs  icons.rs  image.rs  mod.rs  nf_struct.rs  notification.rs  shared.rs  shared_data.rs
src/data/config/: helper.rs  mod.rs  primary.rs  wraper.rs
src/gui/: app.rs  mod.rs
src/gui/elements/: element.rs  mod.rs  notification.rs  style.rs
src/handler/: actions.rs  error.rs  ipc.rs  mod.rs  notification.rs
src/iced stuff borked for now/: layer call Application.rs  layer call MultiApp.rs  layer simple draft.rs  main copy.rs  main doesnt work.rs  mainlatest.rs
src/notification/: app.rs  icons.rs  mod.rs  nf_handler.rs  server.rs  simple.rs  subscription.rs  types.rs
src/render/: convert.rs  menu.rs  mod.rs  notification.rs  revealer.rs  style.rs
src/tray/: dbusmenu.rs  host.rs  icons.rs  menu_types.rs  mod.rs  proxy.rs  subscription.rs  types.rs  watcher.rs
