[package]
description = "iced wayland widget center"
edition = "2024"
name = "iwwc"
version = "0.1.0"

[dependencies]
# base deps
clap = { version = "4.5.47", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

# backend deps
zbus = "5.12.0"

# frontend deps
iced = { git = "https://github.com/pop-os/iced", branch = "master", default-features = false, features = [
  "tokio",
  "advanced",
  "multi-window",
  "wgpu",
  "winit",
  "wayland",
  "image",
  "svg"
] }
wayland-client = "0.31.5"
wayland-protocols = { version = "0.32.3", features = ["client", "unstable"] }
futures = "0.3.31"
indexmap = "2.11.0"

#[profile.release]
#opt-level = "z"
#lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#strip = true  


