[package]
description = "iced wayland widget center"
edition = "2024"
name = "iwwc"
version = "0.1.0"

[dependencies]
# base depsу
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.32"
env_logger = "0.11.10"
tokio = { version = "1.51.0", features = ["full"] }
tokio-stream = "0.1.18"
once_cell = "1.21.4"
serde = { version = "1.0", features = ["derive"] }
kdl = "6.7.1"
miette = "7.6"

# backend deps
zbus = "5.16.0"

# frontend deps
iced = { version = "0.14.0", default-features = false, features = [
  "tokio",
  "advanced",
  "wgpu",
  "wayland",
  "image",
  "svg"
] }
iced_layershell = { path = "/home/user/myrepos/exwlshelleventloop/iced_layershell" }

wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client", "unstable"] }
futures = "0.3.32"
indexmap = "2.14"
nix-freedesktop-icons = { git = "https://github.com/id3v1669/nix-freedesktop-icons", branch = "master" }
xdg = "3.0"

[dev-dependencies]
tempfile = "3"

#[profile.release]
#opt-level = "z"
#lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#strip = true


